[gd_scene load_steps=4 format=3 uid="uid://dr0qusal2o856"]

[ext_resource type="Script" path="res://demo/ui/MainMenu.gd" id="1_mid0i"]
[ext_resource type="PackedScene" uid="uid://drqai807g6637" path="res://demo/ui/crowd_control/CrowdControlLogin.tscn" id="2_himko"]

[sub_resource type="LabelSettings" id="LabelSettings_pdb7g"]
font_size = 28

[node name="MainMenu" type="Control" node_paths=PackedStringArray("PlayButton", "CCButton", "AuthPopup", "LoginPanel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mid0i")
PlayButton = NodePath("VBoxContainer/CenterContainer/VBoxContainer/PlayButton")
CCButton = NodePath("VBoxContainer/CenterContainer/VBoxContainer/CCButton")
AuthPopup = NodePath("Popup")
LoginPanel = NodePath("Popup/CrowdControlLogin")
game_scene = "res://demo/Game.tscn"

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot Crowd Control Demo"
label_settings = SubResource("LabelSettings_pdb7g")
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="CCButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Connect to Crowd Control"

[node name="QuitButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Popup" type="Popup" parent="."]
size = Vector2i(300, 450)
min_size = Vector2i(300, 450)

[node name="CrowdControlLogin" parent="Popup" instance=ExtResource("2_himko")]

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/CCButton" to="." method="_on_cc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="popup_hide" from="Popup" to="." method="_on_popup_popup_hide"]
